2003-02-05  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (mapping): Handle new TLS reloc specs.
	(ppc_elf_suffix): Don't warn for x+off@got when ppc64 and don't
	accept x@got+off etc.
	(md_assemble): Handle TLS relocs.
	(ppc_force_relocation): Force for all TLS relocs.
	(ppc_fix_adjustable): Likewise.
	(md_apply_fix3): Handle TLS relocs.

2003-02-04  Alan Modra  <amodra@bigpond.net.au>

	* config/obj-elf.c (obj_elf_change_section): Set SEC_LINK_ONCE and
	SEC_LINK_DUPLICATES_DISCARD directly rather than using elf_linkonce_p.

2003-02-02  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (enum small_ex_type): Remove.
	(imm_unmatched_hi): Remove.
	(md_assemble): Remove use of imm_unmatched_hi.  Remove the last
	argument from calls to append_insn.
	(append_insn): Remove unmatched_hi parameter; check reloc_type[0]
	instead.
	(macro_build): Update append_insn calls.
	(mips16_macro_build, macro_build_lui): Likewise.
	(mips_ip): Rework handling of small expressions.  Move explicit
	relocation handling into my_getSmallExpression.  Assume that the
	value of 'o' operands is zero if there is only one bracketed
	expression left.
	(percent_op): Make constant.  Record the BFD relocation code
	associated with each operator.
	(my_getSmallParser, my_getPercentOp): Remove.
	(parse_relocation): New function.
	(my_getSamllExpression): Rework.  Fill in relocations here
	rather than in mips_ip.

2003-01-29  Nick Clifton  <nickc@redhat.com>

	* config/tc-i386.c (line_comment_chars): Add '#'.  This makes the
	assembler's handling of # <linenum> "<filename>" directives work.

2003-01-28  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2dbg.c: Include filenames.h.
	(struct file_entry): Make filename const char *.
	(dirs, dirs_in_use, dirs_allocated): New variables.
	(get_filenum): Add NUM argument.  Build directory table.
	(dwarf2_where): Adjust caller.
	(dwarf2_directive_file): Use get_filenum to allocate
	slot in file and directory tables.